TreatmentSelection 1.1.3
========================
 * tweaked estimation of Var(Delta) for subcohort designs. 

TreatmentSelection 1.1.2
========================
 * added plot.type 'selection impact'. see ?plot.trtsel for more information. 

 * fixed a small bug that caused warnings when plotting a trtsel object created from providing fixed risk estimates. 

TreatmentSelection 1.1.1  
========================

 * eval.trtsel: modeled estimates of event rates calculated for subcohort designs had a bug. Calculations now are correct. 

 * eval.trtsel:  also fixed bug where event rates werent calculated when bootstraps = 0. 

 * eval.trtsel:  fixed event rate labeling bug that swapped trt all for trt none. 

 * plot.trtsel: added new plot.type that plots event rate under different marker based treatment assignment rules vs. F_delta(v).

 * plot.trtsel:  the mean trt effect line for subcohort designs was not weighted correctly. this has been fixed for continuous and discrete markers. 

 * plot.trtsel:  fixed a bug building plots for subcohort designs with discrete markers 

 * fixed various small things so that the package now has no warnings from R CMD Check

 * added manual files for tsdata_scc and tsdata_cc

 * calibrate.trtsel: fixed bug when calibrating models fit using stratified case-control data. 


TreatmentSelection 2.0.0
========================

Note: This is a large update with many changes. Although, the estimation methods remain the same, many of the functions inputs have changed. This is to accomodate multivariate models and survival outcomes. 

- Addition of 'trtsel_measures' 
- Input formulas into trtsel objects instead of univariate marker information. This allows 
- The package now allows for survival outcomes. 
