@@ -36,6 +36,7 @@ TreatmentSelection 2.0.0
 Note: This is a large update with many changes. Although, the estimation methods remain the same, many of the functions inputs have changed. This is to accomodate multivariate models and survival outcomes. 
 
 - Addition of 'trtsel_measures' 
-- Input formulas into trtsel objects instead of univariate marker information. This allows 
-- The package now allows for survival outcomes. 
+- Input formulas into trtsel objects instead of univariate marker information. This allows for the evaluation of multivariate models. 
+- The package now allows for survival outcomes.
+- Bias-correction to adjust for over-optimism that comes from evaluating models on the same data that were used to fit model parameters. `eval.trtsel` now implements a bootstrap bias-correction method. 
 
